Begining the slide

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -194,6 +194,63 @@ nav{
     height: 35px;
  }
 
+ .btn-product:hover{
+   background-color: white;
+   color: #7A4A58;
+   border: solid 1px #7A4A58;
+}
+
+
+.btn-product-2{
+   background-color: #7A4A58;
+   color: white;
+   border-radius: 0;
+   font-size: 12px;
+   width: 222px;
+   height: 40px;
+   vertical-align: middle;
+}
+
+.btn-product-2:hover{
+  background-color: white;
+  color: #7A4A58;
+  border: solid 1px #7A4A58;
+}
+
+
  #detailFooter{
     margin: 10px;
+ }
+
+ #product-detail{
+   height: 30px;
+   padding-top: 40px;
+   margin-left: 25px;
+   margin-right: 25px;
+ }
+
+ #product-detail h5{
+   border-bottom: 1px solid #737373;
+   padding-bottom: 7px;
+   font-family: "Nashvill";
+ }
+
+ #look-banner{
+   height: 30px;
+   margin-left: 45px;
+   margin-right: 45px;
+   background-color: gray;
+   vertical-align: center;
+ }
+
+ #look-banner h5{
+   padding-top: 7px;
+   font-family: "Nashvill";
+   font-weight: bold;
+   margin-left: 0px;
+ }
+
+ .card-body{
+    /* border-style: none; */
+    padding: 0px;
  }
