--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,7 +14,7 @@
 }
 
 #nav {
-   background-color: #C8C6CB;
+   background-color: #E7E6E2;
    height: 30px;
 }
 #nav ul{
@@ -151,7 +151,7 @@ nav{
 .sizeNumber{
     width: 50px;
     height: 50px;
-    background-color: gray;
+    background-color: #E7E6E2;
     color: black;
     font-size: 14px;
     text-align: center;
@@ -206,7 +206,7 @@ nav{
    color: white;
    border-radius: 0;
    font-size: 12px;
-   width: 222px;
+   width: 280px;
    height: 40px;
    vertical-align: middle;
 }
@@ -239,7 +239,7 @@ nav{
    height: 30px;
    margin-left: 45px;
    margin-right: 45px;
-   background-color: gray;
+   background-color: #E7E6E2;
    vertical-align: center;
  }
 
@@ -250,7 +250,71 @@ nav{
    margin-left: 0px;
  }
 
- .card-body{
-    /* border-style: none; */
-    padding: 0px;
+
+
+ #carousel{
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
  }
+
+#product-section{
+   margin-top: 20px;
+   margin-left: 30px;
+   margin-right: 30px;
+}
+
+#footer-network{
+   background-color: #E7E6E2;
+   height: 200px;
+   margin-top: 30px;
+   font-family: "Neshvill";
+   color: #737373;
+}
+
+#footer h6{
+   font-family: "Nashvill";
+   color: #737373;
+   font-weight: bold;
+}
+#footer a{
+   color: rgb(144, 142, 139);
+   font-weight: lighter;
+   font-size: 12px;
+}
+
+#footer p{
+   color: #737373;
+   font-size: 15px;
+}
+
+#social-logo{
+   padding-top: 5px; 
+   width: 50px;
+   height: 25px;
+   border-top: 1px solid;
+}
+
+#footer input{
+   align-items: flex-end;
+   font-weight: bold;
+   vertical-align: center;
+   font-size: 13px;
+   border-right-style: none;
+   border-color: #7A4A58;
+   border-width: 1px;
+   height: 40px;
+}
+
+#footer input:focus{
+   outline: 0px;
+}
+
+#email{
+   border-right: 1px solid;
+   border-top: 1px solid;
+   border-bottom: 1px solid;
+   border-left: none;
+   border-radius: 0px;
+   background-color: rgba(0, 0, 0, 0);
+}
